# Spammy-rs

./: .env.sample  .env.sample.es  .gitignore  Cargo.toml  README.md  README_es.md  loadenv.bat  loadenv.sh
src/: lib.rs  main.rs
src/crypto/: discord_verify.rs  error.rs  load.rs  mod.rs
src/discord/: client.rs  error.rs
src/env/: check.rs  identifier.rs  load_msg.rs  mod.rs
src/interaction/: request.rs  response.rs
src/rest/discord/: endpoint.rs  error.rs  mod.rs  verifier.rs
