[package]
name = "spammyrs"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
ntex = { version = "2.3.0", features = ["compress", "tokio"] }
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_repr = "0.1.19"
